# cow

./: .gitignore  Cargo.toml  Cow.sqlproj  CowDB.sln  README.md  config.example.json
Cowboard/Stored Procedures/: UpdateServer.sql
Cowboard/Tables/: Message.sql  Server.sql
Ranking/Stored Procedures/: AddRole.sql  AddServer.sql  AddUser.sql  CalculateLevel.sql  GetAllUsers.sql  ProvideExp.sql  RemoveRole.sql  SetServerTimeout.sql  ToggleChannel.sql
Ranking/Tables/: DisabledChannel.sql  Level.sql  Role.sql  Server.sql  User.sql
src/: interaction_init.rs  main.rs  model.rs
src/commands/: info.rs  mod.rs  rank.rs  rank_config.rs  time.rs
src/commands/cowboard/: cowboard_config.rs  cowboard_db.rs  cowboard_db_models.rs  cowboard_handler.rs  mod.rs
src/commands/general/: ban.rs  danbooru.rs  hello.rs  info.rs  mod.rs  rank.rs
src/commands/music/: mod.rs  music_commands.rs
src/commands/rank_config/: diagnostics.rs  mod.rs  rank_config.rs  roles.rs
src/commands/timeout/: mod.rs  timeout.rs  timeout_config.rs
src/commands/ucm/: calendar.rs  course_models.rs  course_reminders.rs  courses.rs  courses_db.rs  courses_db_models.rs  courses_old.rs  foodtrucks.rs  libcal_models.rs  library.rs  mod.rs  pav_models.rs  pavilion.rs  professors.rs
src/commands/ucm/reminders/: course_reminders.rs  mod.rs
src/models/: config.rs  db_models.rs  embed.rs  macros.rs  mod.rs  user.rs
src/services/: bot_init.rs  cow_framework.rs  database.rs  interaction_handler.rs  message_handler.rs  mod.rs
src/util/: duration.rs  mod.rs
