[package]
name = "cow"
description = "moo"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
bb8 = "0.7"
bb8-tiberius = "0.7"
rust_decimal = "1.19"
rust_decimal_macros = "1.19"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api" # For slash commands/components
]
version = "0.10"

[dependencies.tiberius]
version = "0.6"
default-features = false
features = [
    "tds73",
    "chrono",
    "rust_decimal",
    "bigdecimal",
    "integrated-auth-gssapi",
    "vendored-openssl",
    "winauth"
]