[package]
name = "cow"
description = "moo"
version = "0.1.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
bb8 = "0.7.1"
bb8-tiberius = "0.8.0"
rust_decimal = "1.22.0"
rust_decimal_macros = "1.22.0"
reqwest = { version = "0.11.10", features = ["json", "cookies"] }
num-traits = "0.2.14"
num-derive = "0.3.3"
kuchiki = "0.8.1"
# 0.1.8 is the latest version that works, 0.2 breaks lavalink unlike what documentation says
songbird = { version = "0.1.8" ,default-features = false, features = ["serenity-rustls", "gateway"] }
lavalink-rs = { version = "0.8.0", features = ["rustls", "serenity"] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api", # For slash commands/components
    "voice"
]
version = "0.10.10"

[dependencies.tiberius]
version = "0.7.1"
default-features = false
features = [
    "tds73",
    "chrono",
    "rust_decimal",
    "bigdecimal",
    "integrated-auth-gssapi",
    "vendored-openssl",
    "winauth"
]
